--- a/9-forkify/starter/package.json
+++ b/9-forkify/starter/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "fractional": "^1.0.0"
   }
 }
