--- a/9-forkify/starter/package.json
+++ b/9-forkify/starter/package.json
@@ -23,6 +23,7 @@
     "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
     "fractional": "^1.0.0",
-    "set-default-browser": "^1.0.1"
+    "set-default-browser": "^1.0.1",
+    "uniqid": "^5.0.3"
   }
 }
